refactor: drop civetweb dependency and implement healtz using cpp-httplib
Signed-off-by: Jason Dellaluce <jasondellaluce@gmail.com>

--- a/userspace/falco/CMakeLists.txt
+++ b/userspace/falco/CMakeLists.txt
@@ -84,7 +84,7 @@ if(NOT MINIMAL_BUILD)
 
   list(
     APPEND FALCO_INCLUDE_DIRECTORIES
-    "${CIVETWEB_INCLUDE_DIR}"
+    "${CPPHTTPLIB_INCLUDE}"
     "${OPENSSL_INCLUDE_DIR}"
     "${GRPC_INCLUDE}"
     "${GRPCPP_INCLUDE}"
@@ -97,7 +97,7 @@ if(NOT MINIMAL_BUILD)
     list(APPEND FALCO_LIBRARIES "${GRPC_LIBRARIES}")
   endif()
 
-  list(APPEND FALCO_DEPENDENCIES civetweb)
+  list(APPEND FALCO_DEPENDENCIES cpp-httplib)
 
   list(
     APPEND FALCO_LIBRARIES
@@ -109,8 +109,6 @@ if(NOT MINIMAL_BUILD)
     "${OPENSSL_LIBRARIES}"
     "${LIBYAML_LIB}"
     "${YAMLCPP_LIB}"
-    "${CIVETWEB_LIB}"
-    "${CIVETWEB_CPP_LIB}"
   )
 endif()
 
